Bug 1849332 - Ensure URL::SetPort rejects values with leading non-numeric junk. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D186536